hphp/hack/test/typecheck/shape/shape_field_check/key_exists_required_key_closed_shape.php
<?hh

function test(): bool {
  $s = shape('x' => 42);
  return Shapes::keyExists($s, 'x');
}
